--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ doc/api/
 .flutter-plugins
 .flutter-plugins-dependencies
 development_kit/flutter-games-card/lib/firebase_options.dart
+development_kit/flutter-games-card/macos/Runner/GoogleService-Info.plist
+development_kit/flutter-games-card/ios/Runner/GoogleService-Info.plist
