--- a/provider/provider_todo_app_001/pubspec.yaml
+++ b/provider/provider_todo_app_001/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_state_notifier: ^1.0.0
   provider: ^6.1.2
+  state_notifier: ^1.0.0
   uuid: ^4.5.1
 
 dev_dependencies:
