--- a/provider/open_weather_provider/pubspec.yaml
+++ b/provider/open_weather_provider/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   http: ^1.2.2
+  logging: ^1.3.0
+  provider: ^6.1.2
   recase: ^4.1.0
 
 dev_dependencies:
