--- a/provider/open_weather_provider/pubspec.yaml
+++ b/provider/open_weather_provider/pubspec.yaml
@@ -33,10 +33,12 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.2.1
+  flutter_state_notifier: ^1.0.0
   http: ^1.2.2
   logging: ^1.3.0
   provider: ^6.1.2
   recase: ^4.1.0
+  state_notifier: ^1.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
