--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ doc/api/
 development_kit/flutter-games-card/lib/firebase_options.dart
 development_kit/flutter-games-card/macos/Runner/GoogleService-Info.plist
 development_kit/flutter-games-card/ios/Runner/GoogleService-Info.plist
+provider/fb_auth_provider/macos/Runner/GoogleService-Info.plist
+provider/fb_auth_provider/ios/Runner/GoogleService-Info.plist
