--- a/provider/fb_auth_provider/pubspec.yaml
+++ b/provider/fb_auth_provider/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   firebase_core: ^3.8.0
   flutter:
     sdk: flutter
+  flutter_state_notifier: ^1.0.0
   logging: ^1.3.0
   provider: ^6.1.2
+  state_notifier: ^1.0.0
   validators: ^3.0.0
 
 dev_dependencies:
